added discout section html and css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </header>
     <main>
         <section class="discount-section">
-            <h4>65% OFF</h4>
+            <h4 class="discount inter-normal">65% OFF</h4>
+            <p class="discount-description inter-normal">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h5 class="discount-categories inter-normal">ALL CATEGORIES</h5>
+            <img class="new-year-img" src="images/New Year Photo.png" alt="">
         </section>
     </main>
 </body>
