--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
             <h5 class="discount-categories inter-normal">ALL CATEGORIES</h5>
             <img class="new-year-img" src="images/New Year Photo.png" alt="">
         </section>
+        <section class="party-section">
+           <div class="party-container">
+                <div class="party">
+                    <h3 class="party-title">Welcome to midnight party</h3>
+                    <p class="party-description inter-normal">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                    <button class="join-btn inter-normal">Join now</button>
+                </div>
+                <div class="img-2024">
+                    <img src="images/Group 70.png" alt="">
+                </div>
+           </div>
+        </section>
     </main>
 </body>
 </html>
